Including variable fees for GhostFunds
